# crawler-to-md

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  crawl.sh  database_manager.py  export_manager.py  log_setup.py  main.py  markdown_editor.py  parser_manager.py  pyproject.toml  requirements.txt  scraper.py  utils.py
.github/: dependabot.yml
.github/workflows/: build-and-publish.yaml  ci.yaml  publish-to-pypi.yaml
crawler_to_md/: __init__.py  cli.py  core.py  database_manager.py  export_manager.py  log_setup.py  mcp_server.py  plugins.py  rag.py  scraper.py  utils.py
docs/: README.md  configuration.md  library.md  mcp.md  plugins.md
src/: export_manager.py  scraper.py  utils.py
tests/: sample_plugin.py  test_ai_outputs.py  test_async_scraper.py  test_cli.py  test_crawl_intelligence.py  test_database_manager.py  test_export_manager.py  test_mcp_server.py  test_plugins.py  test_scraper.py  test_trafilatura.py  test_utils.py  test_wave3_cli.py
