# PEP 621 project metadata configuration
# For more information, see https://www.python.org/dev/peps/pep-0621/
[project]
name = "crawler-to-md"
dynamic = ["version"]
description = "Convert web content to Markdown & JSON files to fuel your GPTs and agent AI!"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Grégoire Compagnon (obeone)", email = "obeone@obeone.org" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Project dependencies with exact versions for reproducibility
dependencies = [
    "mdformat==0.7.22",
    "mdformat-gfm==0.4.1",
    "mdformat_footnote==0.1.1",
    "mdformat_frontmatter==2.0.8",
    "mdformat_tables==1.0.0",
    "requests[socks]==2.32.4",
    "httpx>=0.27",
    "tqdm==4.67.1",
    "markitdown==0.1.2",
    "coloredlogs==15.0.1",
    "beautifulsoup4==4.13.4",
    "argcomplete==3.6.2",
    "tomli; python_version < '3.11'",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme   = "no-local-version"

# Optional dependencies for additional features or development
[project.optional-dependencies]
dev = ["pytest", "ruff", "pytest-cov"]
readability = ["trafilatura"]
render = ["playwright"]
rag = ["tiktoken"]
vector = ["pyarrow"]
mcp = ["mcp"]

# Entry points for command-line interface scripts
[project.scripts]
crawler-to-md = "crawler_to_md.cli:main"

# First-party pipeline plugins, discovered via the plugin registry. Third
# parties register additional plugins under the same groups.
[project.entry-points."crawler_to_md.formatters"]
markdown = "crawler_to_md.plugins:MarkdownFormatter"
json = "crawler_to_md.plugins:JsonFormatter"
jsonl = "crawler_to_md.plugins:JsonlFormatter"
llms = "crawler_to_md.plugins:LlmsFormatter"
individual = "crawler_to_md.plugins:IndividualMarkdownFormatter"
chunks = "crawler_to_md.plugins:ChunksFormatter"
vectors = "crawler_to_md.plugins:VectorsFormatter"

[project.entry-points."crawler_to_md.filters"]
url-pattern = "crawler_to_md.plugins:UrlPatternFilter"

[project.entry-points."crawler_to_md.processors"]
noop = "crawler_to_md.plugins:NoOpProcessor"

[project.entry-points."crawler_to_md.fetchers"]
requests = "crawler_to_md.plugins:RequestsFetcher"

# URLs related to the project repository and issue tracker
[project.urls]
Homepage = "https://github.com/obeone/crawler-to-md"
Bug_Tracker = "https://github.com/obeone/crawler-to-md/issues"

# Build system configuration using setuptools
[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

# Setuptools package discovery configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["crawler_to_md*"]

# Ruff linter configuration for code style enforcement
# See https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# Pytest configuration for running tests
# See https://docs.pytest.org/en/latest/reference/reference.html#configuration-options
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
